fix pins overlapping overlays CU-gt2rkm

--- a/src/styles/pages/_carte.scss
+++ b/src/styles/pages/_carte.scss
@@ -418,6 +418,7 @@
           flex-direction: column;
           height: 150px;
           justify-content: space-between;
+          z-index: 2;
         }
 
         &__left {
@@ -427,6 +428,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          z-index: 2;
         }
 
         &__bottom {
@@ -434,6 +436,7 @@
           left: 50%;
           transform: translate(-50%, 0);
           bottom: 10px;
+          z-index: 2;
         }
 
         &__btn,
